# biahub

./: .cursorrules  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  HYDRA_MIGRATION.md  MANTIS_TEMPLATE_INTEGRATION.md  MIGRATION_SUMMARY.md  Makefile  PR_SUMMARY.md  README.md  aqr_mantis_registration_numpy_sympy.py  aqr_mantis_transform_utils.py  comp_micro_register_timepoint_numpy_sympy.ipynb  et --hard 3a890f2  label-free_registration_curated_bead_coordinates.npy  light-sheet_registration_curated_bead_coordinates.npy  light-sheet_start_peaks.npy  one_function_rotation.py  pyproject.toml  zensical.toml
.claude/agents/: dynacell-analyzer.md  dynacell-pipeline.md
.github/workflows/: docs.yml  pull-request-ci.yml
.nextflow/: history
.planning/: bruno_distributed_probe.md  monarch_packaging_plan.md  py312_patterns.md  stage3_design.md  tile_stitch_bench_iterations.md
biahub/:  create_dataset.py  CITATION.cff  __init__.py  apply_inverse_transfer_function.py  characterize_psf.py  cli_hydra.py  combine_transforms.py  compute_transfer_function.py  concatenate.py  convert.py  create_experiment.py  deconvolve.py  deskew.py  edit_zarr.py  estimate_bleaching.py  estimate_crop.py  estimate_deskew.py  estimate_psf.py  estimate_registration.py  estimate_stabilization.py  estimate_stitch.py  extract_organelle_features.py  flat_field.py  flat_field_correction.py  flip.py  graph.py  hydra_configs.py  imgproc.py  optimize_registration.py  process_data.py  pyramid.py  qc.py  qc_fovs.py  reconstruct.py  register.py  rename_channels.py  segment.py  segment_organelles.py  settings.py  stabilize.py  (+5 more)
biahub/analysis/: AnalysisSettings.py  analyze_psf.py  deconvolve.py  flatfield.py  imgproc.py  register.py  stitch.py
biahub/artefacts/: github-markdown.css
biahub/benchmarking/: __init__.py  tracking.py
biahub/cli/: __init__.py  characterize_psf.py  concatenate.py  correct_distortion.py  deconvolve.py  deskew.py  disk.py  estimate_bleaching.py  estimate_deskew.py  estimate_psf.py  estimate_registration.py  estimate_stabilization.py  estimate_stitch.py  job_runner.py  main.py  monitor.py  nf.py  nf_qc.py  optimize_registration.py  option_eat_all.py  parsing.py  printing.py  process_data.py  pyramid.py  register.py  render.py  resolve_function.py  segment.py  slurm.py  stabilize.py  stitch.py  submit_jobs.py  template_manager.py  track.py  update_scale_metadata.py  utils.py
biahub/core/: __init__.py  graph_matching.py  transform.py
biahub/data_structure/: transform.py
biahub/registration/: ants.py  beads.py  estimator.py  graph_matching.py  manual.py  match_z_focus.py  phase_cross_correlation.py  stackreg.py  transform.py  utils.py  z_focus_finding.py
biahub/scripts/: beads_registration.py  zebrafish_stitching.py
biahub/tests/: conftest.py  test_affine.py  test_concatenate.py  test_example_settings.py  test_extract_stage_position.py  test_stabilization.py
biahub/tile_stitch/: __init__.py  _core.py  _nvtx.py  _zarr_util.py  cli.py  config.py  dispatch.py  dispatcher.py  pipeline.py  plan.py  tile_cache.py  tile_cache_adapter.py  workers.py
biahub/transforms/: apply.py
conf/: config.yaml
conf/deskew/: default.yaml
docs/: cli.md  contributing.md  dynamic_imaging.md  image_processing.md  index.md  tile-stitch.md
examples/: hydra_example.py
nextflow/: README-qc-standalone.md  README.md  cleanup.sh  example-flatfield-deskew-reconstruct.dot  example-flatfield-deskew-reconstruct.nf  example_pipeline_steps.yml  mantis-v2-timelapse.dot  mantis-v2-timelapse.nf  mantis-v2.nf  nextflow.config  qc-standalone.nf  stabilization.nf
plans/: biahub-cli-refactor.md  biahub-uv.md
scripts/: beads_reg_stab.py  beads_registration copy.py  beads_registration.py  beads_stabilization.py  benchmark_tracks.example.yml  benchmark_tracks.py  debug_beads_registration.py  debug_beads_stabilization.py  debug_dust_qc_speed.py  debug_dynacell_preprocessing.py  debug_frc_blur.py  debug_hf_detrend.py  debug_hf_entropy_combined.py  debug_hf_fullz.py  debug_hf_multiz_crop.py  debug_registration_sobel.py  debug_segmentation_tracking.py  debug_stab_z.py  debug_track_config_parameters.py  debug_z_stab.py  dynacell_geometry.py  dynacell_init_annotations.py  dynacell_manual_crop.py  dynacell_plotting.py  dynacell_qc.py  dynacell_qc_report.py  dynacell_stage1.py  dynacell_stage2.py  run_tracksdata_fov.py  speed_up_deskew.py  test-nextflow.sh  test_masked_stabilization.py  tracksdata_benchmark_base.yml
settings/: example_characterize_settings.yml  example_concatenate_settings.yml  example_convert_settings.yml  example_create_experiment.yml  example_deskew_settings.yml  example_edit_zarr_settings.yml  example_estimate_registration_settings.yml  example_estimate_registration_settings_beads.yml  example_estimate_registration_settings_manual.yml  example_estimate_stabilization_settings.yml  example_estimate_stabilization_settings_xy_focus-finding.yml  example_estimate_stabilization_settings_xyz_beads.yml  example_estimate_stabilization_settings_z_focus-finding.yml  example_experiment_config.yaml  example_flat_field_settings.yml  example_grid_movies_settings.yml  example_grid_per_well_settings.yml  example_napari_movie_settings.yml  example_napari_zarr_to_mp4.yml  example_organelle_feature_extraction.yml  example_organelle_segmentation.yml  example_process_w_imports.yml  example_process_with_config_settings.yml  example_segmentation_settings.yml  example_tile_settings.yaml  example_tile_stitch_cpu.yml  example_tile_stitch_gpu.yml  example_track_settings.yml  example_virtual_stain_settings.yml  example_xyz_estimate_stabilization_settings_with_beads.yml  example_xyz_estimate_stabilization_settings_with_ff.yml  example_xyz_estimate_stabilization_settings_with_pcc.yml
templates/: README.md
tests/: conftest.py  test_concatenate.py  test_example_settings.py  test_segment_organelles.py  test_stabilization.py  test_tracking_benchmark.py
(+241 files in other folders)
