[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "biahub"
description = "Bioimage analysis hub."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <3.14"

dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "click",
  "iohub[tensorstore]>=0.3.0a6",
  "stitch",
  "matplotlib",
  "natsort",
  "numpy",
  "markdown",
  "monai",
  "pandas~=2.1",
  "pydantic>2,<3",
  "scipy<1.16",  # as of 06/23/2025 scipy 1.16.0 breaks test imports
  "submitit",
  "torch",
  "tqdm",
  "waveorder>=0.3",
  "largestinteriorrectangle",
  "antspyx",
  "pystackreg",
  "imageio-ffmpeg",
  "dask[array]",
  "toml",
  "scikit-learn",
  "numba>=0.58.0",
  "llvmlite>=0.41.0",
  "humanize",
]

[project.optional-dependencies]
segment = ["cellpose"]

track = ["ultrack>=0.7.0rc2"]

gui = ["napari", "PyQt6", "napari-animation"]

shard = ["tensorstore"]

build = ["build", "twine"]

all = ["biahub[segment,track,shard,build,gui]"]

doc = [
    "zensical>=0.0.11",
    "mkdocs-click>=0.8",
]

[dependency-groups]
dev = [
  "biahub[segment,track,shard,build]",
  "pre-commit~=4.5",
  "pytest~=8.4",
  "ruff~=0.15",
]

[project.scripts]
biahub = "biahub.cli.main:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["biahub"]

[tool.uv.sources]
stitch = { git = "https://github.com/ahillsley/stitching", branch = "jen" }

[tool.ruff]
line-length = 95
target-version = "py311"

exclude = ["archive", "examples", "scripts", "notebooks", "ignore"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B"]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "N802",  # Function name should be lowercase (scientific code uses uppercase)
    "N803",  # Argument name should be lowercase (scientific code uses uppercase)
    "N806",  # Variable in function should be lowercase (scientific code uses uppercase)
    "N805",  # First argument of a method should be named `self`
    "N812",  # Lowercase imported as non-lowercase
    "N815",  # Variable in class scope should not be mixedCase
    "N817",  # CamelCase imported as acronym
    "N999",  # Invalid module name
    "B006",  # Do not use mutable data structures for argument defaults
    "B007",  # Loop control variable not used within loop body
    "B016",  # Cannot raise a literal
    "B028",  # No explicit `stacklevel` keyword argument found
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from`
    "B905",  # `zip()` without an explicit `strict=` parameter
    "UP022", # Prefer `capture_output` over sending `stdout` and `stderr` to `PIPE`
]

[tool.ruff.lint.isort]
lines-between-types = 1
known-first-party = ["biahub"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
