[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "biahub"
description = "Bioimage analysis hub."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <3.14"

dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "click",
  "iohub[tensorstore]>=0.3.0a6",
  "stitch @ git+https://github.com/ahillsley/stitching@jen",
  "matplotlib",
  "natsort",
  "numpy",
  "markdown",
  "monai",
  "pandas~=2.1",
  "pydantic>2",
  "scipy",
  "submitit",
  "torch",
  "tqdm",
  "waveorder>=0.3",
  "largestinteriorrectangle",
  "antspyx",
  "pystackreg",
  "imageio-ffmpeg",
  "dask[array]",
  "toml",
  "scikit-learn",
  "numba>=0.58.0",
  "llvmlite>=0.41.0",
  "humanize",
]

[project.optional-dependencies]
segment = ["cellpose"]

track = ["ultrack>=0.7.0rc2"]

gui = ["napari[pyqt]", "napari-animation"]

shard = ["tensorstore"]

build = ["build", "twine"]

all = ["biahub[segment,track,shard,build,gui]"]

doc = [
    "zensical>=0.0.11",
    "mkdocs-click>=0.8",
]

[dependency-groups]
dev = [
  "biahub[segment,track,shard,build]",
  "pre-commit~=4.5",
  "pytest~=8.4",
  "ruff~=0.15",
]

[project.scripts]
biahub = "biahub.cli.main:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["biahub"]

[tool.ruff]
line-length = 95
target-version = "py311"

exclude = ["archive", "examples", "scripts", "notebooks"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "D"]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "N802",  # Function name should be lowercase (scientific code uses uppercase)
    "N803",  # Argument name should be lowercase (scientific code uses uppercase)
    "N806",  # Variable in function should be lowercase (scientific code uses uppercase)
    "N815",  # Variable in class scope should not be mixedCase
    "N999",  # Invalid module name (vendored BeadExtractor.py)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
lines-between-types = 1
known-first-party = ["biahub"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
